# aa-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/backend/: __init__.py  config.py  database.py  main.py  utils.py
src/backend/auth/: __init__.py  security.py
src/backend/models/: __init__.py  approval.py  auth.py  common.py  push.py
src/backend/repositories/: __init__.py
src/backend/repositories/base/: __init__.py  approval_repository.py  cli_token_repository.py  password_reset_token_repository.py  user_repository.py  workspace_repository.py
src/backend/repositories/mongo/: __init__.py  approval_repository.py  cli_token_repository.py  password_reset_token_repository.py  push_subscription_repository.py  user_repository.py  workspace_repository.py
src/backend/routes/: __init__.py  approvals.py  auth.py  cli_tokens.py  push_config.py  push_subscriptions.py
src/backend/services/: __init__.py  approval_service.py  auth_service.py  cli_token_service.py  email_service.py  push_notification_service.py
tests/: conftest.py  test_approvals.py  test_auth.py  test_cli_tokens.py  test_email_service.py  test_push_notifications.py
