[project]
name = "backend"
version = "0.1.0"
description = "Agent Approvals backend API"
readme = "README.md"
authors = [
    { name = "tanaka-mambinge", email = "tmambinge@mugonat.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bcrypt<5",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.3",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pywebpush>=2.3.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
backend = "backend.main:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "mongomock-motor>=0.0.36",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
